--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.3.1",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
